--- a/src/extensions/site_t3demo/Resources/Private/Language/de.locallang_db.xlf
+++ b/src/extensions/site_t3demo/Resources/Private/Language/de.locallang_db.xlf
@@ -63,6 +63,10 @@
 				<source>FAQ Page</source>
 				<target>FAQ-Seite</target>
 			</trans-unit>
+			<trans-unit id="backendlayout.search.title" resname="backendlayout.search.title">
+				<source>Search</source>
+				<target>Suche</target>
+			</trans-unit>
 			<trans-unit id="backendlayout.stage.name" resname="backendlayout.stage.name">
 				<source>Stage Content</source>
 				<target>Inhalt Bühne</target>
@@ -106,6 +110,10 @@
 			<trans-unit id="pages.doktype.faqpage" resname="pages.doktype.faqpage">
 				<source>FAQ Page</source>
 				<target>FAQ-Seite</target>
+			</trans-unit>
+			<trans-unit id="pages.doktype.search" resname="pages.doktype.search">
+				<source>Search</source>
+				<target>Suche</target>
 			</trans-unit>
 			<trans-unit id="pages.palettes.teaserdata.label" resname="pages.palettes.teaserdata.label">
 				<source>Teaser Data</source>
